Fixed an issue displaying the landing page on iOS 7 devices, fixes #744.

--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -37,7 +37,7 @@
   margin-left:0px;
   margin-right:0px;
   overflow:hidden;
-  min-height:80vh;
+  min-height: 400px;
   #container-left {
     padding: 40px 70px;
   }
@@ -98,7 +98,7 @@
       margin-left:0;
       width:60%;
       box-shadow: none;
-      min-height: 80vh;
+      min-height: 400px;
     }
   }
 
